--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -3,29 +3,58 @@
 {% block title %}Loan Calculator{% endblock %}
 {% block content %} 
 <section>
-    <form method="POST">
-        <h1>Loan Cost Calculator</h1>
-        <label for="loanAmount">Loan Amount: $</label>
-        <input type="number" id="loanAmount" name="loanAmount" required>
+    <!--
+        You might be wondering why there are two versions of the form here. I wanted the data to stay populated after a submit, but wanted the ability to reset the form easily. After a bit of Googling I found it would be easiest to implement with if statements. The approach of having two forms is easier as I have to write in fewer if statements.
+    -->
+    <form method="POST" id="loanForm">
+    <h1>Loan Cost Calculator</h1>
+    <label for="loanAmount">Loan Amount: $</label>
+    {% if SUBMIT == true %}
+        <input type="number" id="loanAmount" name="loanAmount" value="{{request.form['loanAmount']}}" step="0.1">
         <div>
-            <label for="loanTerm">Loan Term: </label>
+            <label for="loanTermYears">Loan Term Years: </label>
+            <input id="loanTerm" name="years" type="number" placeholder="years" value="{{request.form['years']}}">
+            <label for="loanTermMonths">Loan Term Months: </label>
+            <input id="loanTerm" name="months" type="number" placeholder="months" value="{{request.form['months']}}">
+        </div>
+        <label for="interestRate">Annual Interest Rate: (APR) </label>
+        <span><input type="number" id="interestRate" name="interestRate" step=".01"
+                value="{{request.form['interestRate']}}">%</span>
+        <br>
+        <label for="payFrequency">Payment Frequency: </label>
+        <select id="payFrequency" name="payFrequency" value="{{request.form['payFrequency']}}">
+            <option value="monthly" selected>Monthly</option>
+            <option value="bi-weekly">Bi-weekly</option>
+            <option value="weekly">Weekly</option>
+        </select>
+    {% else %}
+        <input type="number" id="loanAmount" name="loanAmount" step="0.1">
+        <div>
+            <label for="loanTermYears">Loan Term Years: </label>
             <input id="loanTerm" name="years" type="number" placeholder="years">
+            <label for="loanTermMonths">Loan Term Months: </label>
             <input id="loanTerm" name="months" type="number" placeholder="months">
         </div>
-        <label for="interestRate">Annual Interest Rate: </label>
-        <span><input type="number" id="interestRate" name="interestRate">%</span>
+        <label for="interestRate">Annual Interest Rate: (APR) </label>
+        <span><input type="number" id="interestRate" name="interestRate" step=".01"
+                >%</span>
         <br>
         <label for="payFrequency">Payment Frequency: </label>
         <select id="payFrequency" name="payFrequency">
-            <option value="weekly">Weekly</option>
+            <option value="monthly" selected>Monthly</option>
             <option value="bi-weekly">Bi-weekly</option>
-            <option value="monthly">Monthly</option>
+            <option value="weekly">Weekly</option>
         </select>
+    {% endif %}
+
+
         <br>
-        <button type="submit">Submit</button>
-
-
+        <button type="submit" name="submit" value="submit">Submit</button>
+        <button type="submit" name="reset" value="reset">Reset</button>
     </form>
+    {%if LOAN_DETAILS and SUBMIT %}
+    Total Loan Cost: ${{LOAN_DETAILS.total_loan_cost}}
+    {% endif %}
 
 
 </section>
