--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -1,35 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Home{% endblock%}</title>
-</head>
-<body>
-    <header>
-        {% for message in get_flashed_messages() %}
-        <div id="flash">
-            {{message}}
-            <button type="button" id="alert">
-                <span aria-hidden="true">&times;</span>
-            </button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% block title %}Home{% endblock%} -MoneyCalcs</title>
+    <link rel="stylesheet" href="static/style.css" />
+    <link rel="icon" href="static\icons8-calculator-16.png" />
+  </head>
+  <body>
+    {% for message in get_flashed_messages() %}
+    <div id="flash" class="flash">
+      {{message}}
+      <button type="button" id="alert">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %} {% block content %} {% endblock %}
 
-        </div>
-        {% endfor %}
-    </header>
-    <main>
-        {% block content %} 
-        {% endblock %}
-    </main>
     <script>
-        const flash = document.getElementById('flash');
-        const alert = document.getElementById('alert');
-        
-        alert.addEventListener('click', function closeAlert(event) {
-            flash.remove();
-        })
-    </script>
+      const flash = document.getElementById("flash");
+      const alert = document.getElementById("alert");
 
-</body>
+      alert.addEventListener("click", function closeAlert(event) {
+        flash.remove();
+      });
+    </script>
+  </body>
 </html>
