--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -1,74 +1,129 @@
-{% extends 'base.html' %}
-
-{% block title %}Loan Calculator{% endblock %}
-{% block content %} 
+{% extends 'base.html' %} {% block title %}Loans{% endblock %} {% block content
+%}
 <section>
-    <!--
+  <!--
         You might be wondering why there are two versions of the form here. I wanted the data to stay populated after a submit, but wanted the ability to reset the form easily. After a bit of Googling I found it would be easiest to implement with if statements. The approach of having two forms is easier as I have to write in fewer if statements.
     -->
-    <form method="POST" id="loanForm">
+  <header>
     <h1>Loan Cost Calculator</h1>
-    <label for="loanAmount">Loan Amount: $</label>
-    {% if SUBMIT == true %}
-        <input type="number" id="loanAmount" name="loanAmount" value="{{request.form['loanAmount']}}" step="0.1">
-        <div>
-            <label for="loanTermYears">Loan Term Years: </label>
-            <input id="loanTerm" name="years" type="number" placeholder="years" value="{{request.form['years']}}">
-            <label for="loanTermMonths">Loan Term Months: </label>
-            <input id="loanTerm" name="months" type="number" placeholder="months" value="{{request.form['months']}}">
-        </div>
-        <label for="interestRate">Annual Interest Rate: (APR) </label>
-        <span><input type="number" id="interestRate" name="interestRate" step=".01"
-                value="{{request.form['interestRate']}}">%</span>
-        <br>
+    <p>
+      Thinking of taking a loan? This simple loan calculator can show you the
+      true cost.
+    </p>
+  </header>
+
+  <main>
+    <form method="POST" id="loanForm" class="form">
+      {% if SUBMIT == true %}
+      <div class="calcInput">
+        <label for="loanAmount">Loan Amount($):</label>
+
+        <input
+          type="number"
+          id="loanAmount"
+          name="loanAmount"
+          value="{{request.form['loanAmount']}}"
+          step="0.1"
+        />
+      </div>
+      <div class="calcInput">
+        <label for="loanTermYears">Loan Term Years: </label>
+        <input
+          id="loanTerm"
+          name="years"
+          type="number"
+          value="{{request.form['years']}}"
+        />
+      </div>
+      <div class="calcInput">
+        <label for="loanTermMonths">Loan Term Months: </label>
+        <input
+          id="loanTerm"
+          name="months"
+          type="number"
+          value="{{request.form['months']}}"
+        />
+      </div>
+      <div class="calcInput">
+        <label for="interestRate">Annual Interest Rate(%APR):</label>
+        <input
+          type="number"
+          id="interestRate"
+          name="interestRate"
+          step=".01"
+          value="{{request.form['interestRate']}}"
+        />
+      </div>
+      <div class="calcInput">
         <label for="payFrequency">Payment Frequency: </label>
-        <select id="payFrequency" name="payFrequency" value="{{request.form['payFrequency']}}">
-            <option value="monthly" selected>Monthly</option>
-            <option value="bi-weekly">Bi-weekly</option>
-            <option value="weekly">Weekly</option>
+        <select
+          id="payFrequency"
+          name="payFrequency"
+          value="{{request.form['payFrequency']}}"
+        >
+          <option value="monthly" selected>Monthly</option>
+          <option value="bi-weekly">Bi-weekly</option>
+          <option value="weekly">Weekly</option>
         </select>
-    {% else %}
-        <input type="number" id="loanAmount" name="loanAmount" step="0.1">
-        <div>
-            <label for="loanTermYears">Loan Term Years: </label>
-            <input id="loanTerm" name="years" type="number" placeholder="years">
-            <label for="loanTermMonths">Loan Term Months: </label>
-            <input id="loanTerm" name="months" type="number" placeholder="months">
-        </div>
-        <label for="interestRate">Annual Interest Rate: (APR) </label>
-        <span><input type="number" id="interestRate" name="interestRate" step=".01"
-                >%</span>
-        <br>
+      </div>
+      {% else %}
+      <div class="calcInput">
+        <label for="loanAmount">Loan Amount($):</label>
+        <input type="number" id="loanAmount" name="loanAmount" step="0.1" />
+      </div>
+
+      <div class="calcInput">
+        <label for="loanTermYears">Loan Term Years: </label>
+        <input id="loanTerm" name="years" type="number" />
+      </div>
+      <div class="calcInput">
+        <label for="loanTermMonths">Loan Term Months: </label>
+        <input id="loanTerm" name="months" type="number" />
+      </div>
+
+      <div class="calcInput">
+        <label for="interestRate">Annual Interest Rate(%APR): </label>
+
+        <input type="number" id="interestRate" name="interestRate" step=".01" />
+      </div>
+
+      <div class="calcInput select">
         <label for="payFrequency">Payment Frequency: </label>
         <select id="payFrequency" name="payFrequency">
-            <option value="monthly" selected>Monthly</option>
-            <option value="bi-weekly">Bi-weekly</option>
-            <option value="weekly">Weekly</option>
+          <option value="monthly" selected>Monthly</option>
+          <option value="bi-weekly">Bi-weekly</option>
+          <option value="weekly">Weekly</option>
         </select>
-    {% endif %}
+      </div>
+      {% endif %}
 
-
-        <br>
+      <div class="calcButtons">
         <button type="submit" name="submit" value="submit">Submit</button>
         <button type="submit" name="reset" value="reset">Reset</button>
+      </div>
     </form>
     {%if LOAN_DETAILS and SUBMIT %}
-    Total Loan Cost: ${{LOAN_DETAILS.total_loan_cost}}
+
+    <div class="calcOutput">
+      <hr />
+      <ul>
+        <li>Total Loan Cost: ${{LOAN_DETAILS.total_loan_cost}}</li>
+        <li>
+          Payment({{LOAN_DETAILS.period_type}}):${{LOAN_DETAILS.period_payment}}
+        </li>
+        <li>Total Interest Paid: ${{LOAN_DETAILS.interest_paid}}</li>
+      </ul>
+    </div>
+
+    <div class="pieChart">
+      <img
+        src="data:image/png;base64 ,{{LOAN_CHART}}"
+        alt="A pie chart comparing interest to principal"
+      />
+    </div>
+
     {% endif %}
+  </main>
 
-
+  {% endblock %}
 </section>
-<section class="page-overview">
-    <h2>End The Debt Cycle</h2>
-    <p>Sometimes you just have to take a loan. Especially when it comes to essentials like housing, healthcare and education.</p>
-    <p> But then there are those more discretionary loans. New electronics, expensive car payments, vacations on the credit card. This second category of loans can leave you trapped in a cycle of debt.</p>
-     <p>Over time, interest will balloon the total cost of your loan. This can leave you with payments that keep piling up, year after year.</p>
-     
-     <p>The next time you're considering a discretionary loan, consider using this handy loan calculator first. It can help you see the true cost of borrowing money today.</p> 
-     
-     <p>Then, you can use our <a href="#">Investment Calculator</a> to see the difference saving all those loan payments could make. </p>
-</section>
-
-
-
-{% endblock %} 
