--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -13,27 +13,98 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-header, main, .flash {
+header, main, .flash, nav ul {
 
-    width: 80%; 
+    max-width: 80%; 
     margin: auto;
 
 }
+
+.hero {
+    max-width: 15rem;
+}
+
+@media screen and (min-width: 800px) {
+
+    .hero {
+       max-width: 20rem;
+        
+    }
+
+    .homeHeader {
+         display: flex; 
+         gap: 2rem;
+
+    }
+
+    nav ul {
+    display: flex;
+    justify-content: space-evenly;
+
+    }   
+
+   
+}
+
+
+
+
+
+.homeHeaderText p, .mainPageSections p {
+    line-height: 1.3;
+    font-weight: 300;
+    margin-bottom: 0.5rem;
+}
+
+
+
+.homeHeaderText h1, .mainPageSections h2 {
+    line-height: 0.9;
+    margin-bottom: 0.5rem;
+}
+
+
+
+nav {
+    width: 100%;
+    background-color:  #bdbab6;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    
+    
+}
+
+
+
+nav li {
+    list-style: none;
+    
+
+}
+
+nav a {
+    text-decoration: none;
+    font-weight: 500; 
+    color: #3a3938;
+}
+
+nav a:hover {
+    color: #7b7771;
+} 
 
 header {
     margin-top: 1rem;
 }
 
+
 h1 {
     color:#3a3938;
 }
 
-header p {
+
     
-    line-height: 80%;
-    font-weight: 300;
-    margin-bottom: 0.5rem;
-}
+    
+  
 
 
 .calcInput {
@@ -104,3 +175,10 @@ button:hover {
     margin-top: -0.25 rem;
 }
 
+.horizontalRuleDiv {
+    padding: 1rem;
+}
+
+.mainPageSections {
+    padding: 0.5rem;
+}
