minor changes to index.html and hero .jpg filename

--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -4,7 +4,7 @@
   <div>
     <img
       class="hero"
-      src="static\pexels-jack-sparrow-4046110 (2).jpg"
+      src="static\pexels-jack-sparrow-4046110.jpg"
       alt="A couple looking at thier laptop"
     />
   </div>
