added image and flexbox layout to loan.html. Added javascript to loan.html to scroll down to results after form submission.

--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -7,6 +7,10 @@
     <title>{% block title %}Home{% endblock%} -MoneyCalcs</title>
     <link rel="stylesheet" href="static/style.css" />
     <link rel="icon" href="static\icons8-calculator-16.png" />
+    <script
+      defer
+      src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
   </head>
   <body>
     <nav>
