--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content%}
 
-<header class="homeHeader">
+<header class="header">
   <div>
     <img
       class="hero"
@@ -33,7 +33,7 @@
       many financial experts repaying all your high-interest (eg. credit card)
       debts before investing. Considering taking a loan to make a big purchase?
       Our
-      <a href="{{url_for('views.loan')}}">loan calculator</a> can help you see
+      <a href="{{url_for('views.loan')}}">Loan Calculator</a> can help you see
       the true cost first.
     </p>
   </section>
@@ -45,7 +45,7 @@
       debt, interest rates meant you got back way less money than you put in.
       When you invest, its the other way around. Even investing relatively small
       amounts today can have an impact for your future. Try our
-      <a href="#">investment calculator </a>to explore the possibilities.
+      <a href="#">Investment Calculator </a>to explore the possibilities.
     </p>
   </section>
 </main>
