--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -9,33 +9,51 @@
 }
 
 body {
+    padding-top: 5rem;
     background-color: #f9f8f7;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-header, main, .flash, nav ul {
+ header, main, .flash, nav ul, .hero {
 
     max-width: 80%; 
-    margin: auto;
+    margin: 0.5rem auto 0.5rem auto;
 
 }
+
+
 
 .hero {
-    max-width: 15rem;
+    max-width: 17rem;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 600px) {
+     .hero {
+       max-width: 30rem;
+        
+    }
+}
+
+@media screen and (min-width: 1200px) {
 
     .hero {
-       max-width: 20rem;
+       max-width: 30rem;
         
     }
 
-    .homeHeader {
+    .header{
          display: flex; 
          gap: 2rem;
 
     }
+
+    .displayResults {
+        display: flex; 
+        justify-content: flex-start;
+        gap: 5rem;
+
+    }
+
 
     nav ul {
     display: flex;
@@ -46,11 +64,7 @@ header, main, .flash, nav ul {
    
 }
 
-
-
-
-
-.homeHeaderText p, .mainPageSections p {
+.headerText p, .mainPageSections p {
     line-height: 1.3;
     font-weight: 300;
     margin-bottom: 0.5rem;
@@ -58,23 +72,22 @@ header, main, .flash, nav ul {
 
 
 
-.homeHeaderText h1, .mainPageSections h2 {
+.headerText h1, .mainPageSections h2 {
     line-height: 0.9;
-    margin-bottom: 0.5rem;
+    margin-top: 0.1rem;
+    
 }
-
-
 
 nav {
     width: 100%;
     background-color:  #bdbab6;
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
+    padding: 0.5rem 0rem 0.5rem 0rem;
+    
+    position: fixed;
+    top: 0;
     
     
 }
-
-
 
 nav li {
     list-style: none;
@@ -92,20 +105,10 @@ nav a:hover {
     color: #7b7771;
 } 
 
-header {
-    margin-top: 1rem;
-}
-
-
-h1 {
+h1, h2 {
     color:#3a3938;
+    margin-bottom: 0.5rem;
 }
-
-
-    
-    
-  
-
 
 .calcInput {
     padding: 0.25rem;
@@ -114,7 +117,7 @@ h1 {
 .calcInput input {
     border-radius: 160rem;
     border: 0.1rem solid #ccc;
-    
+    max-width: 8rem;
     padding: 0.25rem; 
     text-indent: .25rem;
 }
@@ -127,7 +130,6 @@ h1 {
 .calcInput input:hover, .calcInput select:hover, button:hover {
     cursor: pointer;
 }
-
 
 .calcInput select {
     border-radius: 160rem;
@@ -149,8 +151,6 @@ button {
     border-radius: 160rem;
     
 }
-
-
 
 button:hover {
     background-color:#3b3937;
@@ -181,4 +181,8 @@ button:hover {
 
 .mainPageSections {
     padding: 0.5rem;
+}
+
+#results {
+    margin-top: 4rem;
 }
