--- a/fincalc/templates/loan.html
+++ b/fincalc/templates/loan.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %} {% block title %}Loans{% endblock %} {% block content
 %}
-<section>
-  <header>
+
+<header class="header">
+  <div>
+    <img class="hero" src="static\pexels-mikhail-nilov-6963889.jpg" alt="" />
+  </div>
+
+  <div class="headerText">
     <h1>Loan Cost Calculator</h1>
     <p>
       Thinking of taking a loan? This simple calculator can show you the true
       cost.
     </p>
-  </header>
-
-  <main>
     <form method="POST" id="loanForm" class="form">
       <div class="calcInput">
         <label for="loanAmount">Loan Amount($):</label>
@@ -41,7 +43,7 @@
         />
       </div>
       <div class="calcInput">
-        <label for="interestRate">Annual Interest Rate(%APR):</label>
+        <label for="interestRate">Annual Interest Rate(%):</label>
         <input
           type="number"
           id="interestRate"
@@ -68,29 +70,32 @@
         <button type="submit" name="reset" value="reset">Reset</button>
       </div>
     </form>
-    {%if LOAN_DETAILS and SUBMIT %}
+  </div>
+</header>
 
-    <div class="calcOutput">
-      <hr />
-      <ul>
-        <li>Total Loan Cost: ${{LOAN_DETAILS.total_loan_cost}}</li>
-        <li>
-          Payment({{LOAN_DETAILS.period_type}}):
-          ${{LOAN_DETAILS.period_payment}}
-        </li>
-        <li>Total Interest Paid: ${{LOAN_DETAILS.interest_paid}}</li>
-      </ul>
-    </div>
+{%if LOAN_DETAILS and SUBMIT %}
+<main class="displayResults">
+  <div class="calcOutput">
+    <hr />
+    <ul>
+      <li>Total Loan Cost: ${{LOAN_DETAILS.total_loan_cost}}</li>
+      <li>
+        Payment({{LOAN_DETAILS.period_type}}): ${{LOAN_DETAILS.period_payment}}
+      </li>
+      <li>Total Interest Paid: ${{LOAN_DETAILS.interest_paid}}</li>
+    </ul>
+  </div>
 
-    <div class="pieChart">
-      <img
-        src="data:image/png;base64 ,{{LOAN_CHART}}"
-        alt="A pie chart comparing interest to principal"
-      />
-    </div>
-
-    {% endif %}
-  </main>
-
-  {% endblock %}
-</section>
+  <div class="pieChart">
+    <img
+      src="data:image/png;base64 ,{{LOAN_CHART}}"
+      alt="A pie chart comparing interest to principal"
+    />
+  </div>
+</main>
+<div id="results"</div>
+<script defer>
+  const element = document.getElementById("results");
+  element.scrollIntoView();
+</script>
+{% endif %} {% endblock %}
