--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -1,3 +1,5 @@
+
+/* Reset*/
 *, *::after, *::before {
     margin: 0;
     padding: 0; 
@@ -7,86 +9,24 @@
     hyphens: manual;
 
 }
-
+/* Global Styles */
 body {
-    padding-top: 5rem;
+    
     background-color: #f9f8f7;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
- header, main, .flash, nav ul, .hero {
+ header, main, .flash, nav ul, .hero, .mobileButtonDiv {
 
     max-width: 80%; 
     margin: 0.5rem auto 0.5rem auto;
 
 }
 
-
-
-.hero {
-    max-width: 17rem;
-}
-
-@media screen and (min-width: 600px) {
-     .hero {
-       max-width: 30rem;
-        
-    }
-}
-
-@media screen and (min-width: 1200px) {
-
-    .hero {
-       max-width: 30rem;
-        
-    }
-
-    .header{
-         display: flex; 
-         gap: 2rem;
-
-    }
-
-    .displayResults {
-        display: flex; 
-        justify-content: flex-start;
-        gap: 5rem;
-
-    }
-
-
-    nav ul {
-    display: flex;
-    justify-content: space-evenly;
-
-    }   
-
-   
-}
-
-.headerText p, .mainPageSections p {
-    line-height: 1.3;
-    font-weight: 300;
-    margin-bottom: 0.5rem;
-}
-
-
-
-.headerText h1, .mainPageSections h2 {
-    line-height: 0.9;
-    margin-top: 0.1rem;
-    
-}
-
+/* global nav settings*/
 nav {
-    width: 100%;
-    background-color:  #bdbab6;
-    padding: 0.5rem 0rem 0.5rem 0rem;
-    
-    position: fixed;
-    top: 0;
-    
-    
+    background-color: #c0bcb8;
+    padding: 1rem;
 }
 
 nav li {
@@ -104,6 +44,95 @@ nav a {
 nav a:hover {
     color: #7b7771;
 } 
+/*mobile nav settings */ 
+
+.mobileNavToggle {
+    background: transparent;
+    border: none;
+}
+
+
+.hero {
+    max-width: 17rem;
+}
+
+/* media queries */ 
+@media screen and (max-width: 1199px) {
+    .pcNav {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    
+
+
+      
+
+
+    .hero {
+       max-width: 20rem;
+        
+    }
+
+    .header{
+         display: flex; 
+         gap: 2rem;
+
+    }
+
+   
+
+
+   
+
+   
+}
+
+@media screen and (min-width: 1200px) {
+
+    .mobileNavToggle, .mobileNav {
+    display: none;
+}
+
+     .hero {
+       max-width: 30rem;
+
+}
+
+ .pcNav ul{
+    display: flex;
+    justify-content: space-evenly;
+
+    }   
+
+     .displayResults {
+        display: flex; 
+        justify-content: flex-start;
+        gap: 5rem;
+
+    }
+
+}
+
+/* end media queries */ 
+
+
+.headerText p, .mainPageSections p {
+    line-height: 1.3;
+    font-weight: 300;
+    margin-bottom: 0.5rem;
+}
+
+
+
+.headerText h1, .mainPageSections h2 {
+    line-height: 0.9;
+    margin-top: 0.1rem;
+    
+}
+
+
 
 h1, h2 {
     color:#3a3938;
