--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -23,7 +23,40 @@ body {
 
 }
 
-/* global nav settings*/
+.headerText p, .mainPageSections p {
+    line-height: 1.3;
+    font-weight: 300;
+    margin-bottom: 0.5rem;
+}
+
+
+
+.headerText h1, .mainPageSections h2 {
+    line-height: 0.9;
+    margin-top: 0.1rem;
+    
+}
+
+
+
+h1, h2 {
+    color:#3a3938;
+    margin-bottom: 0.5rem;
+}
+
+button {
+    background-color:#2e2c2b;
+    color: white;
+    padding: 0.5rem;
+    border-radius: 160rem;
+    
+}
+
+button:hover {
+    background-color:#3b3937;
+}
+
+/* global nav styles*/
 nav {
     background-color: #c0bcb8;
     padding: 1rem;
@@ -44,7 +77,7 @@ nav a {
 nav a:hover {
     color: #7b7771;
 } 
-/*mobile nav settings */ 
+/*mobile nav styles */ 
 
 .mobileNavToggle {
     background: transparent;
@@ -53,10 +86,12 @@ nav a:hover {
 
 
 .hero {
-    max-width: 17rem;
+    max-width: 10rem;
 }
 
-/* media queries */ 
+
+/* media queries */
+
 @media screen and (max-width: 1199px) {
     .pcNav {
         display: none;
@@ -64,28 +99,16 @@ nav a:hover {
 }
 
 @media screen and (min-width: 600px) {
-    
-
-
-      
 
 
     .hero {
-       max-width: 20rem;
-        
+       max-width: 15rem;    
     }
 
     .header{
          display: flex; 
          gap: 2rem;
-
     }
-
-   
-
-
-   
-
    
 }
 
@@ -118,27 +141,7 @@ nav a:hover {
 /* end media queries */ 
 
 
-.headerText p, .mainPageSections p {
-    line-height: 1.3;
-    font-weight: 300;
-    margin-bottom: 0.5rem;
-}
-
-
-
-.headerText h1, .mainPageSections h2 {
-    line-height: 0.9;
-    margin-top: 0.1rem;
-    
-}
-
-
-
-h1, h2 {
-    color:#3a3938;
-    margin-bottom: 0.5rem;
-}
-
+/* calculator form styles */
 .calcInput {
     padding: 0.25rem;
 }
@@ -173,18 +176,7 @@ h1, h2 {
     margin-top: 0.25rem;
 }
 
-button {
-    background-color:#2e2c2b;
-    color: white;
-    padding: 0.5rem;
-    border-radius: 160rem;
-    
-}
-
-button:hover {
-    background-color:#3b3937;
-}
-
+/* calculator output styles */
 .calcOutput li {
     list-style: none;
     padding: 0.1rem;
