--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <nav>
-      <div x-data="{isOpen : false}" class="navDiv">
+      <div x-data="{isOpen : false}">
         <div class="mobileButtonDiv">
           <button
             class="mobileNavToggle"
@@ -28,6 +28,7 @@
               alt=""
             />
           </button>
+          <p>MoneyCalcs &copy;</p>
         </div>
         <div class="pcNav">
           <ul class="pcNav">
