--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %} {% block content%}
 
 <header class="header">
-  <div>
+  <div class="flexItem">
     <img
       class="hero"
       src="static\pexels-jack-sparrow-4046110.jpg"
       alt="A couple looking at thier laptop"
     />
   </div>
-  <div class="homeHeaderText">
+  <div class="homeHeaderText flexItem">
     <h1>Spend Less. Invest More. Repeat.</h1>
     <p>
       Financial literacy is for everybody. Whatever your situation, you can
