--- a/fincalc/templates/loan.html
+++ b/fincalc/templates/loan.html
@@ -86,8 +86,8 @@
     </ul>
   </div>
 
-  <div class="pieChart">
-    <img
+  <div class="pieChartDiv">
+    <img class="pieChart"
       src="data:image/png;base64 ,{{LOAN_CHART}}"
       alt="A pie chart comparing interest to principal"
     />
