--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -34,7 +34,11 @@
           <ul class="pcNav">
             <li><a href="{{url_for('views.index')}}">Home</a></li>
             <li><a href="{{url_for('views.loan')}}">Loan Calculator</a></li>
-            <li><a href="#">Investment Calculator(Coming Soon)</a></li>
+            <li>
+              <a href="{{url_for('views.invest')}}"
+                >Investment Calculator(Coming Soon)</a
+              >
+            </li>
           </ul>
         </div>
         <div x-show="isOpen" class="mobileNav">
