--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -26,13 +26,13 @@
   <section class="mainPageSections">
     <h2>Step #1: Pay Down Your Debt</h2>
     <p>
-      For most of us, debt is an inevitable part of modern life. Housing,
+      For many of us, debt is an inevitable part of modern life. Housing,
       healthcare, car payments. The list goes on, but not all debt is
       inevitable. Things like reducing credit card spending or getting a more
       affordable car can save you thousands in interest payments. That's why
-      many financial experts repaying all your high-interest (eg. credit card)
-      debts before investing. Considering taking a loan to make a big purchase?
-      Our
+      many financial experts advise repaying all your high-interest (eg. credit
+      card) debts before investing. Considering taking a loan to make a big
+      purchase? Our
       <a href="{{url_for('views.loan')}}">Loan Calculator</a> can help you see
       the true cost first.
     </p>
