--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -64,7 +64,7 @@
       </button>
     </div>
     {% endfor %} {% block content %} {% endblock %}
-
+    <footer><p>&copy; 2022 Thom Bator</p></footer>
     <script>
       const flash = document.getElementById("flash");
       const alert = document.getElementById("alert");
