--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -35,9 +35,7 @@
             <li><a href="{{url_for('views.index')}}">Home</a></li>
             <li><a href="{{url_for('views.loan')}}">Loan Calculator</a></li>
             <li>
-              <a href="{{url_for('views.invest')}}"
-                >Investment Calculator(Coming Soon)</a
-              >
+              <a href="{{url_for('views.invest')}}">Investment Calculator</a>
             </li>
           </ul>
         </div>
