--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -13,7 +13,7 @@
 body {
     
     background-color: #f9f8f7;
-    padding-top: 8rem;
+    padding-top: 6rem;
     padding-bottom: 8rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -208,17 +208,19 @@ footer {
     margin-bottom: 0.25rem;
 }
 
-.pieChartDiv {
+.chartDiv {
     margin-top: -0.25 rem;
 }
-.pieChart {
+.chart {
     width: 80%;
 }
 .horizontalRuleDiv {
     padding: 1rem 0rem 1rem 0rem;
 }
 
-
+.displayResults {
+    margin-top: 2rem;
+}
 
 #results {
     margin-top: 4rem;
