--- a/fincalc/templates/invest.html
+++ b/fincalc/templates/invest.html
@@ -94,6 +94,10 @@
 
 
     </div>
+    <div class="chartDiv">
+      <img src="data:image/png;base64 ,{{INVEST_GRAPH}}" alt="A graph showing investment returns by year" class="chart">
+    </div>
+
   </main>
   <div id="results"</div>
 <script defer>
