--- a/fincalc/templates/loan.html
+++ b/fincalc/templates/loan.html
@@ -90,8 +90,8 @@
     </ul>
   </div>
 
-  <div class="pieChartDiv">
-    <img class="pieChart"
+  <div class="chartDiv">
+    <img class="chart"
       src="data:image/png;base64 ,{{LOAN_CHART}}"
       alt="A pie chart comparing interest to principal"
     />
