changed padding to improve look on mobile, removed (coming soon) from mobile nav invest calculator link

--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -46,7 +46,7 @@
 
             <li><a href="{{url_for('views.loan')}}">Loan Calculator</a></li>
 
-            <li><a href="#">Investment Calculator(Coming Soon)</a></li>
+            <li><a href="#">Investment Calculator</a></li>
             <hr />
           </ul>
         </div>
