--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -13,7 +13,7 @@
 body {
     
     background-color: #f9f8f7;
-    padding-top: 6rem;
+    padding-top: 8rem;
     padding-bottom: 8rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -120,6 +120,9 @@ footer {
 }
 
 @media screen and (min-width: 1300px) {
+    body{
+        padding-top: 6rem;
+    }
 
         .header{
          display: flex; 
