forgot to add live link to mobile nav for invest calculator. Has been added now.

--- a/fincalc/templates/base.html
+++ b/fincalc/templates/base.html
@@ -46,7 +46,9 @@
 
             <li><a href="{{url_for('views.loan')}}">Loan Calculator</a></li>
 
-            <li><a href="#">Investment Calculator</a></li>
+            <li>
+              <a href="{{url_for('views.invest')}}">Investment Calculator</a>
+            </li>
             <hr />
           </ul>
         </div>
