changed length of results heading on invest.html to improve appearance for mobile

--- a/fincalc/templates/invest.html
+++ b/fincalc/templates/invest.html
@@ -85,7 +85,7 @@
       <h2>Results: </h2>
       <hr/>
       <ul>
-        <li>Investment Value After {{INVEST_DETAILS.years}} Years : ${{INVEST_DETAILS.total}}</li>
+        <li>Value After {{INVEST_DETAILS.years}} Years : ${{INVEST_DETAILS.total}}</li>
         <li>Your Total Deposits: ${{INVEST_DETAILS.total_deposits}}</li>
         <li>Total Profits: ${{INVEST_DETAILS.profit}} </li>
         
