changed form heading on loan.html to improve mobile display

--- a/fincalc/templates/loan.html
+++ b/fincalc/templates/loan.html
@@ -45,7 +45,7 @@
         />
       </div>
       <div class="calcInput">
-        <label for="interestRate">Annual Interest Rate(%):</label>
+        <label for="interestRate">Annual Rate(%):</label>
         <input
           type="number"
           id="interestRate"
