Forgot to update the in-text hyperlink for the Investment Calculator to live app once page was created. That update has now been completed.

--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -45,7 +45,8 @@
       debt, interest rates meant you got back way less money than you put in.
       When you invest, its the other way around. Even investing relatively small
       amounts today can have an impact for your future. Try our
-      <a href="#">Investment Calculator </a>to explore the possibilities.
+      <a href="{{url_for('views.loan')}}">Investment Calculator </a>to explore
+      the possibilities.
     </p>
   </section>
 </main>
