--- a/fincalc/templates/loan.html
+++ b/fincalc/templates/loan.html
@@ -21,6 +21,7 @@
           id="loanAmount"
           name="loanAmount"
           value="{{request.form['loanAmount']}}"
+          min="0"
           step="0.01"
         />
       </div>
@@ -31,6 +32,7 @@
           name="years"
           type="number"
           step="1"
+          min="0"
           value="{{request.form['years']}}"
         />
       </div>
@@ -41,6 +43,7 @@
           name="months"
           type="number"
           step="1"
+          min="0"
           value="{{request.form['months']}}"
         />
       </div>
@@ -51,6 +54,7 @@
           id="interestRate"
           name="interestRate"
           step=".01"
+          min="0.1"
           value="{{request.form['interestRate']}}"
         />
       </div>
