added colored background to error messages and adjusted so they display better on mobile. Caught another possible input error so adjusted form verification logic to catch it

--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -63,6 +63,14 @@ em {
     font-style: italic;
 }
 
+.flash {
+    background-color: rgba(204, 0, 0, 0.7);
+    text-align: center;
+    padding: 1rem;
+    border-radius: 20px;
+    max-width: 80%;
+    }
+
 /* global nav and footer styles*/
 nav, footer {
     background-color: #c0bcb8;
