--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -70,6 +70,9 @@ em {
     border-radius: 20px;
     max-width: 80%;
     }
+#alert {
+    margin-top: 0.25rem;
+}
 
 /* global nav and footer styles*/
 nav, footer {
