added _blank attributes to links on invest.html so references to other sites would open in new tabs

--- a/fincalc/templates/invest.html
+++ b/fincalc/templates/invest.html
@@ -11,7 +11,7 @@
     <h1>Investment Calculator</h1>
     <p>
       If you invested $10,000 in the
-      <a href="https://en.wikipedia.org/wiki/S%26P_500">S&P 500 index </a>fund
+      <a href="https://en.wikipedia.org/wiki/S%26P_500" target="_blank">S&P 500 index </a>fund
       in 1980 it would be worth over $1,000,000 today. Regular monthly
       contributions can add up to life-changing amounts over time. Use our
       investment calculator to see what your financial future could look like. All results are based on annual compounding.
@@ -19,7 +19,7 @@
           Note: by default this calculator uses the S&P 500's
           <a
             href="https://www.investopedia.com/ask/answers/042415/what-average-annual-return-sp-500.asp"
-            >average annual return</a
+            target="_blank">average annual return</a
           >
           of 11.82%. You can also input a custom interest rate.
               </p>
@@ -92,7 +92,7 @@
         <li>Value After {{INVEST_DETAILS.years}} Years : ${{INVEST_DETAILS.total}}</li>
         <li>Your Total Deposits: ${{INVEST_DETAILS.total_deposits}}</li>
         <li>Total Profits: ${{INVEST_DETAILS.profit}} </li>
-        
+
       </ul>
 
 
