--- a/fincalc/templates/invest.html
+++ b/fincalc/templates/invest.html
@@ -2,7 +2,7 @@
 <header class="header">
   <div class="flexItem">
     <img
-      class="hero"
+      class="hero images"
       src="static\pexels-rodnae-productions-5637572.jpg"
       alt="Elderly couple holding flowers"
     />
@@ -75,8 +75,8 @@
 
 
         <div class="calcButtons">
-          <button type="submit" name="submit" value="submit">Submit</button>
-          <button type="submit" name="reset" value="reset">Reset</button>
+          <button class="calcButtonStyle" type="submit" name="submit" value="submit">Submit</button>
+          <button class="calcButtonStyle" type="submit" name="reset" value="reset">Reset</button>
         </div>
       </div>
     </form>
