--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -16,6 +16,8 @@ body {
     padding-top: 8rem;
     padding-bottom: 8rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    line-height: 0.25 rem;
 }
 
  header, main, .flash, nav ul, .hero, .mobileButtonDiv, footer p {
@@ -30,13 +32,22 @@ main {
 }
 
  p {
-    line-height: 1.3;
+    line-height: 1.5;
     font-weight: 400;
     margin-bottom: 0.5rem;
 }
 
+.images {
+    border: 2px solid white;
+    border-radius: 1rem;
+}
+.heroP {
+    margin: 1rem 0rem 1rem 0rem;
+    font-weight: 500;
+}
 
-h1, h2 {
+
+h1, h2, h3 {
     line-height: 0.9;
     margin-top: 0.1rem;
     color:#3a3938;
@@ -47,10 +58,34 @@ h1, h2 {
     margin-bottom: 1.5rem;
 }
 
-button {
+.homeHeaderText {
+    margin-top: 5rem;
+    margin-bottom: 2rem;
+}
+
+ .homeButtons {
+
+        display: flex;
+        justify-content:  center;
+        align-items: center;
+        gap: 2rem;
+        margin-top: 4rem;
+
+    }
+
+.homeButtonsStyle {
     background-color:#2e2c2b;
     color: white;
-    padding: 0.5rem;
+    font-weight: 700;
+    padding: 1rem;
+    border-radius: 160rem;
+}
+
+.calcButtonStyle {
+    background-color:#2e2c2b;
+    color: white;
+    font-weight: 700;
+    padding: 0.8rem;
     border-radius: 160rem;
 
 }
@@ -122,6 +157,7 @@ footer {
 
 
 
+
 /* media queries */
 
 @media screen and (max-width: 1299px) {
@@ -166,6 +202,8 @@ footer {
 
     }
 
+
+
 }
 
 /* end media queries */
@@ -201,9 +239,9 @@ footer {
 
 .calcButtons {
     display: flex;
-
+    justify-content: center;
     gap: 1rem;
-    margin-top: 0.25rem;
+    margin-top: 1rem;
 }
 
 /* calculator output styles */
