--- a/fincalc/templates/invest.html
+++ b/fincalc/templates/invest.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%} {% block title %}Invest{% endblock %} {%block content%}
-<header class="header">
+<header class="header sectionBG">
   <div class="flexItem">
     <img
       class="hero images"
@@ -69,12 +69,12 @@
         </div>
 
     </form>
-    <hr/>
+
   </div>
 </header>
 
 {% if SUBMIT  %}
-  <main class="displayResults">
+  <main class="displayResults sectionBG">
     <div class="calcOutput">
       <h2>Results: </h2>
       <br>
