--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -44,9 +44,14 @@ main {
 
 .sectionBG{
     background-color: #f5f5f5aa;
-    border: 1px solid #3a3938;
+    box-shadow: 10px 5px 5px #a5aeb6 ;
     padding: 1rem;
     border-radius: 1rem;
+    transition: transform .2s;
+}
+
+.sectionBG:hover {
+    transform: scale(1.01);
 }
 
 .images {
@@ -291,6 +296,7 @@ footer {
 }
 .chart {
     width: 80%;
+    box-shadow: 10px 5px 5px #a5aeb6 ;
 }
 .horizontalRuleDiv {
     padding: 1rem 0rem 1rem 0rem;
