some small tweaks to padding on images

--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -8,7 +8,7 @@
       alt="A couple looking at thier laptop"
     />
   </div>
-  <div class="homeHeaderText flexItem">
+  <div class="headerText flexItem">
     <div class="homeHeaderHeadlines">
 
       <h1>GET YOUR MONEY RIGHT</h1>
