--- a/fincalc/static/style.css
+++ b/fincalc/static/style.css
@@ -31,7 +31,7 @@ main {
     margin-bottom: 5rem;
 }
 
-.homeMain {
+.homeMain{
     margin-top: 2rem;
 }
 
@@ -66,7 +66,7 @@ main {
 
 h1, h2, h3 {
     line-height: 0.9;
-    margin-top: 0.1rem;
+
     color:#3a3938;
     margin-bottom: 0.75rem;
 }
@@ -75,9 +75,9 @@ h1, h2, h3 {
     margin-bottom: 1.5rem;
 }
 
-.homeHeaderText {
-    margin-top: 5rem;
-    margin-bottom: 2rem;
+.headerText, img {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
  .homeButtons {
