noticed an issue with the nav overlapping the header on small screen sizes. Added more padding-top to the body to fix.

--- a/fincalc/templates/index.html
+++ b/fincalc/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content%}
 
-<header class="header sectionBG">
+<header class="header headerMain sectionBG">
   <div class="flexItem">
     <img
       class="hero images"
